@@ -1,5 +1,9 @@
 2006-12-28  OHASHI Akira  <bg66@koka-in.org>
 
+	* sb-mixi.el (shimbun-mixi-post-mail-wrapper): New function.
+
+2006-12-28  OHASHI Akira  <bg66@koka-in.org>
+
 	* sb-mixi.el (shimbun-mixi-message-id-suffix): New constant.
 	(shimbun-mixi-make-message-id): Use it and change return value.
 	(shimbun-mixi-make-object-from-message-id): New function.
